feat(open API): done with implementing routes
